<resources>
    <string name="app_name">ClassTracker</string>

    <!--Sample Course Data-->
    <string name="class_name_text_label">Mobile App Development</string>
    <string name="class_subj_text_label">CIS</string>
    <string name="class_sec_text_label">298</string>
    <string name="class_days_text_label">M,W</string>
    <string name="class_time_text_label">2:30 &#8211; 4:30</string>
    <string name="class_grade_text_label">3.5</string>

    <!--Sample Assignment Data-->
    <string name="assignment_name_text_label">Term Project</string>
    <string name="assignment_grade_text_label">100 / 150</string>
    <string name="assignment_percent_text_label">66.6%</string>

    <!--Formatting strings-->
    <string name="class_time_format">%1$s &#8211; %2$s</string>
    <string name="assignment_score_label_format_text">%1$.0f / %2$.0f</string>
    <string name="assignment_percent_format_text">%.1f %%</string>

    <!--Assignment Edit Strings-->
    <string name="assignment_name_edit_text_hint">Assignment Name:</string>
    <string name="assignment_points_earned_edit_text_hint">Points Earned:</string>
    <string name="assignment_points_possible_edit_text_hint">Points Possible:</string>
    <string name="create_assignment_button_text">Add Assignment</string>
    <string name="edit_assignment_button_text">Update Assignment</string>
    <string name="delete_assignment_button_text">Delete Assignment</string>

    <!--Course Edit Strings-->
    <string name="course_name_edit_text_hint">Course Name:</string>
    <string name="course_subj_edit_text_hint">Subject:</string>
    <string name="course_sect_edit_text_hint">Section:</string>
    <string name="course_id_edit_text_hint">Course ID/CRN:</string>
    <string name="course_start_time_button_label">Start Time</string>
    <string name="course_end_time_button_label">End Time</string>
    <string name="create_course_button_text">Add Course</string>
    <string name="edit_course_button_text">Update Course</string>
    <string name="delete_course_button_text">Delete Course</string>

    <!--Error/Alert Strings-->
    <string name="delete_confirmation_string">Are you sure you want to delete %1$s?</string>
    <string name="empty_crn_error_string">Missing CRN/ID! Course not added/updated.</string>
    <string name="duplicate_crn_error_string">Duplicate CRN!</string>

    <!--Time Picker Strings-->
    <string name="start_time_time_picker_title">Start Time:</string>
    <string name="end_time_time_picker_title">End Time:</string>
</resources>
