<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    
    <EditText
        android:id="@+id/assignment_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/assignment_name_edit_text_hint"/>

    <EditText
        android:id="@+id/assignment_points_earned_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/assignment_points_earned_edit_text_hint"
        android:layout_below="@id/assignment_name_edit_text"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/assignment_points_possible_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/assignment_points_possible_edit_text_hint"
        android:layout_below="@id/assignment_points_earned_edit_text"
        android:inputType="numberDecimal"/>
    
</RelativeLayout>