<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/assignment_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/assignment_name_text_label"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/assignment_percent_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/assignment_percent_text_label"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/assignment_grade_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/assignment_percent_text_view"
        android:text="@string/assignment_grade_text_label"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/assignment_grade_text_view"
        android:background="@android:color/darker_gray"/>

</RelativeLayout>